--- a/src/display/html/index.html
+++ b/src/display/html/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
   <title>Test Page</title>
-  <link rel="stylesheet" type="text/css" href="sdo.css" />
+  <link rel="stylesheet" type="text/css" href="quadtree.css" />
   </head>
   <body>
     <canvas id="test" width="400" height="400"></canvas>
