Added print/pause buttons (and js hooks) to demo page. Sped up simulation. Cleaned up some logging

--- a/src/display/html/index.html
+++ b/src/display/html/index.html
@@ -6,6 +6,8 @@
   <body>
     <canvas id="test" width="640" height="640"></canvas>
     <br />
+    <button id="pause">Pause</button>
+    <button id="print">Print</button>
     <div id="output" class="window">Output</div>
   </body>
   <script src="quadtree.js"></script>
