Removed unused html test page. Pointed script to correct filename

--- a/src/display/index.html
+++ b/src/display/index.html
@@ -10,5 +10,5 @@
     <button id="print">Print</button>
     <div id="output" class="window">Output</div>
   </body>
-  <script src="display.js"></script>
+  <script src="display-min.js"></script>
 </html>
